# stockmate

./: .dockerignore  .env.example  .gitignore  CODE_REVIEW.md  CODE_REVIEW_INDEX.md  Dockerfile  QUICK_START_GUIDE.md  README.md  RECOMMENDATIONS.md  REVIEW_SUMMARY.md  pyproject.toml
alembic/: env.py
alembic/versions/: 088ecdb87c56_init_migration.py  11b5a57e7a5b_auto_generate_schema_changes.py  1b2bc2a92fbe_auto_generate_schema_changes.py  1c3ab513a67c_initial_commit.py  33825db3a822_initial_migration.py  518445040611_init.py  5b19b19a5810_initial_commit.py  606bc7a1fcc5_initia.py  7d6922ad43be_initial_migration.py  7e7a55fe0e80_initial_migration.py  891ac1c87558_change_key_metrics.py  8b70d8bba402_update_size.py  8bcae02d1b33_initial_migration.py  9ae31411a4b5_add_relationship.py  9af736cba74d_add_stock_news_table.py  a1f6686414e3_initial_migration.py  aa43e0e354ce_auto_generate_schema_changes.py  aa5e87d1ce60_initial_migration.py  cb6275edecb7_initial_migration.py  d5b678545398_initial_migration.py  e5e34517877b_initia.py  ec34bf49043e_initial_migration.py  fb62cf444e08_add_health_table.py
app/: main.py
app/core/: config.py  logs.py  security.py
app/data/: jp_stocks.json  stocks.json
app/db/: engine.py
app/dependencies/: __init__.py  auth.py  db.py  market_api.py  sync_services.py
app/models/: company.py
app/repositories/: analyst_estimate_repo.py  base_repo.py  company_metrics_repo.py  company_page_repo.py  company_repo.py  dcf_repo.py  dividend_repo.py  dto.py  financial_health_repo.py  financial_repo.py  financial_statements_repo.py  grading_repo.py  key_metrics_repo.py  market_data_repo.py  metrics_repo.py  news_repo.py  portfolio_repo.py  price_target_repo.py  quotes_repo.py  rating_repo.py  (+5 more)
tests/: conftest.py  test_db.py
(+165 files in other folders)
